@@ -1,6 +1,7 @@
 Version 0.5.9
 -------------
 Added support for dognzb.cr (thanks to commits from wolrah & gboudreau)
+Added support for www.nzbhq.com
 Bugfix: now working with the new nzbs.org (thanks to commits from wolrah, jdart & gboudreau)
 
 Version 0.5.8
